add for gui .png

--- a/cpp/eg/cedate/CMakeLists.txt
+++ b/cpp/eg/cedate/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
-project (cedate)
+project (mmcal)
 set (CMAKE_CXX_STANDARD 11)
 include_directories(../../include)
 set(SOURCES cedate.cpp ../../source/ceDateTime.cpp ../../source/ceMmDateTime.cpp)
-add_executable(cedate ${SOURCES})
+add_executable(mmcal ${SOURCES})
